garde_tests/tests/ui/compile-pass/length.rs
#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(length(min = 10, max = 100))]
    field: &'a str,
}

fn main() {}
